--- a/Blues.csproj
+++ b/Blues.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Scripts\PersonHelper.cs" />
+    <Compile Include="Scripts\PickupArea.cs" />
+    <Compile Include="Scripts\Globals.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\Resources.cs" />
     <Compile Include="Scripts\Level.cs" />
