--- a/Blues.csproj
+++ b/Blues.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Scripts\Globals.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\Player.cs" />
+    <Compile Include="Scripts\Projectile.cs" />
     <Compile Include="Scripts\Resources.cs" />
     <Compile Include="Scripts\Level.cs" />
     <Compile Include="Scripts\Weapon.cs" />
